--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -72,6 +72,7 @@
         android:background="@color/transparent"
         android:padding="4dp"
         android:scrollbars="horizontal"
+        tools:listitem="@layout/card_view_calendar_tasks"
         app:layout_constraintTop_toBottomOf="@id/tv_month_tasks" />
 
 
