--- a/app/src/main/res/layout/activity_patients.xml
+++ b/app/src/main/res/layout/activity_patients.xml
@@ -58,6 +58,7 @@
         android:inputType="text"
         android:maxLines="1"
         android:padding="16dp"
+        android:textColor="#222440"
         android:textColorHint="#222440"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/iv_header_patients" />
@@ -66,7 +67,7 @@
         android:id="@+id/rv_patients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/patient_item"
-        app:layout_constraintTop_toBottomOf="@id/et_search_patients" />
+        app:layout_constraintTop_toBottomOf="@id/et_search_patients"
+        tools:listitem="@layout/patient_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
