--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/layoutGrey"
+    android:layoutDirection="ltr"
     tools:context=".HomeActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -192,8 +193,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_quote_home" />
 
-    <ImageView
-        android:id="@+id/iv_today_bg_home"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_today_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -201,10 +202,11 @@
         android:layout_marginEnd="84dp"
         android:background="@drawable/bg_tv_home"
         android:paddingStart="24dp"
-        android:paddingTop="16dp"
+        android:paddingTop="4dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home" />
+        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home"
+        tools:listitem="@layout/today_item" />
 
     <ImageView
         android:id="@+id/iv_tasks_home"
@@ -212,7 +214,7 @@
         android:layout_height="56dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_tasks_home"
-        app:layout_constraintBottom_toBottomOf="@id/iv_today_bg_home"
+        app:layout_constraintBottom_toBottomOf="@id/rv_today_home"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
@@ -226,7 +228,7 @@
         android:textColor="@color/navyBlue"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_today_bg_home" />
+        app:layout_constraintTop_toBottomOf="@id/rv_today_home" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_upcoming_home"
