Patient Details + Appointment Check/Cancel Debug

--- a/app/src/main/res/layout/activity_add_clinic.xml
+++ b/app/src/main/res/layout/activity_add_clinic.xml
@@ -47,12 +47,12 @@
         android:id="@+id/et_name_clinic_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
         android:fontFamily="@font/vazir_regular"
-        android:gravity="right"
+        android:gravity="start"
         android:hint="نام مطب"
         android:imeOptions="actionNext"
         android:inputType="text"
@@ -67,12 +67,12 @@
         android:id="@+id/et_address_clinic_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
         android:fontFamily="@font/vazir_regular"
-        android:gravity="right"
+        android:gravity="start"
         android:hint="آدرس ( اختیاری)"
         android:imeOptions="actionDone"
         android:inputType="text"
