--- a/app/src/main/res/drawable/bg_circle_check_disabled.xml
+++ b/app/src/main/res/drawable/bg_circle_check_disabled.xml
@@ -10,6 +10,10 @@
                 android:height="40dp" />
 
             <solid android:color="@color/white" />
+
+            <stroke
+                android:width="1dp"
+                android:color="#f0f0f0" />
         </shape>
     </item>
     <item
