--- a/app/src/main/res/layout/tasks_appointment_item.xml
+++ b/app/src/main/res/layout/tasks_appointment_item.xml
@@ -15,7 +15,7 @@
         android:background="@color/transparent">
 
         <TextView
-            android:id="@+id/tv_time_appointment_cv"
+            android:id="@+id/tv_time_tasks_appointment_cv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/vazir_bold"
@@ -33,11 +33,11 @@
             android:background="@drawable/bg_appointment_card"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
-            app:layout_constraintEnd_toStartOf="@id/tv_time_appointment_cv"
+            app:layout_constraintEnd_toStartOf="@id/tv_time_tasks_appointment_cv"
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/tv_patient_name_appointment_cv"
+                android:id="@+id/tv_patient_name_tasks_appointment_cv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -49,11 +49,11 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_close_appointment_cv"
+                app:layout_constraintStart_toEndOf="@id/btn_cancel_tasks_appointment_cv"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_title_appointment_cv"
+                android:id="@+id/tv_title_tasks_appointment_cv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -66,27 +66,29 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_close_appointment_cv"
-                app:layout_constraintTop_toBottomOf="@id/tv_patient_name_appointment_cv" />
+                app:layout_constraintStart_toEndOf="@id/btn_cancel_tasks_appointment_cv"
+                app:layout_constraintTop_toBottomOf="@id/tv_patient_name_tasks_appointment_cv" />
 
             <Button
-                android:id="@+id/btn_check_appointment_cv"
+                android:id="@+id/btn_check_tasks_appointment_cv"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="16dp"
                 android:background="@drawable/bg_circle_check_disabled"
+                android:stateListAnimator="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/btn_close_appointment_cv"
+                android:id="@+id/btn_cancel_tasks_appointment_cv"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/bg_circle_close_disabled"
+                android:stateListAnimator="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_check_appointment_cv"
+                app:layout_constraintStart_toEndOf="@id/btn_check_tasks_appointment_cv"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
