--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -85,10 +85,10 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
         android:fontFamily="@font/vazir_regular"
-        android:gravity="right"
+        android:gravity="start"
         android:hint="نام بیمار"
         android:imeOptions="actionNext"
-        android:inputType="phone"
+        android:inputType="text"
         android:maxLines="1"
         android:padding="16dp"
         android:textColor="@color/black"
