--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="layoutGrey">#F6F8FC</color>
+    <color name="lightRed">#f8eaea</color>
+    <color name="lightOrange">#ffe9d7</color>
     <color name="hintGrey">#878787</color>
     <color name="textGrey">#a4a5a8</color>
     <color name="navBarGrey">#D8D8D8</color>
