--- a/app/src/main/res/layout/activity_confirm_code.xml
+++ b/app/src/main/res/layout/activity_confirm_code.xml
@@ -70,6 +70,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/bg_et_register_code"
         android:fontFamily="@font/vazir_regular"
+        android:gravity="center"
         android:inputType="number"
         android:maxLength="1"
         android:textColor="@color/black"
@@ -86,6 +87,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_et_register_code"
         android:fontFamily="@font/vazir_regular"
+        android:gravity="center"
         android:inputType="number"
         android:maxLength="1"
         android:textColor="@color/black"
@@ -101,6 +103,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/bg_et_register_code"
         android:fontFamily="@font/vazir_regular"
+        android:gravity="center"
         android:inputType="number"
         android:maxLength="1"
         android:textColor="@color/black"
@@ -109,6 +112,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_confirm_code_instruction" />
 
     <Button
+        android:id="@+id/btn_submit_confirm_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
