--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@id/et_register_name" />
 
     <EditText
-        android:id="@+id/et_register_specialty"
+        android:id="@+id/et_register_speciality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -105,26 +105,6 @@
         app:layout_constraintTop_toBottomOf="@id/et_register_last_name" />
 
     <EditText
-        android:id="@+id/et_register_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_et_rounded_rectangle"
-        android:fontFamily="@font/vazir_bold"
-        android:gravity="right"
-        android:hint="شماره موبایل"
-        android:imeOptions="actionNext"
-        android:inputType="phone"
-        android:padding="16dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/hintGrey"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/et_register_specialty" />
-
-    <EditText
         android:id="@+id/et_register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -135,14 +115,14 @@
         android:fontFamily="@font/vazir_bold"
         android:gravity="right"
         android:hint="رمز عبور"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:padding="16dp"
         android:singleLine="true"
         android:textColor="@color/black"
         android:textColorHint="@color/hintGrey"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/et_register_phone" />
+        app:layout_constraintTop_toBottomOf="@id/et_register_speciality" />
 
     <Button
         android:id="@+id/btn_register_submit"
