--- a/app/src/main/res/drawable/ic_info.xml
+++ b/app/src/main/res/drawable/ic_info.xml
@@ -4,11 +4,11 @@
     android:viewportWidth="16"
     android:viewportHeight="18">
     <path
-        android:fillColor="@color/orange"
+        android:fillColor="@color/clinitickPurple"
         android:fillType="nonZero"
         android:pathData="M8.006,7C8.587,7 9,7.2 9,7.494l-0,4.002c-0,0.252 -0.413,0.504 -0.994,0.504C7.452,12 7,11.748 7,11.496L7,7.494C7,7.2 7.452,7 8.006,7zM7.994,4C8.558,4 9,4.462 9,4.993 9,5.524 8.558,6 7.994,6 7.442,6 7,5.524 7,4.993 7,4.462 7.442,4 7.994,4z" />
     <path
-        android:fillColor="@color/orange"
+        android:fillColor="@color/clinitickPurple"
         android:fillType="nonZero"
         android:pathData="M8,0C12.422,0 16,3.458 16,7.73c-0,3.489 -2.376,6.385 -5.579,7.369l-1.82,2.593c-0.134,0.193 -0.36,0.308 -0.601,0.308s-0.467,-0.115 -0.602,-0.308l-1.82,-2.593C2.375,14.115 0,11.217 0,7.729 0,3.456 3.581,0 8,0zM6.231,13.82c0.166,0.045 0.31,0.145 0.406,0.282L8,16.044l1.363,-1.942c0.096,-0.137 0.24,-0.237 0.406,-0.282 2.726,-0.737 4.776,-3.161 4.776,-6.09C14.545,4.243 11.61,1.406 8,1.406c-3.61,0 -6.545,2.837 -6.545,6.324 -0,2.932 2.053,5.354 4.776,6.09z" />
 </vector>
