--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/vazir_bold"
         android:text="خوش آمدید"
-        android:textColor="@color/orange"
+        android:textColor="@color/clinitickPurple"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
         android:fontFamily="@font/vazir_bold"
         android:padding="8dp"
         android:text="ثبت نام"
-        android:textColor="@color/orange"
+        android:textColor="@color/clinitickPurple"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/btn_login_intro"
         app:layout_constraintStart_toStartOf="parent"
