--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -70,7 +70,7 @@
         android:layout_marginStart="24dp"
         android:fontFamily="@font/vazir_regular"
         android:text="ویرایش"
-        android:textColor="@color/orange"
+        android:textColor="@color/clinitickPurple"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/et_phone_patient_detail"
         app:layout_constraintStart_toStartOf="@+id/et_phone_patient_detail"
@@ -103,7 +103,7 @@
         android:layout_marginStart="24dp"
         android:fontFamily="@font/vazir_regular"
         android:text="ویرایش"
-        android:textColor="@color/orange"
+        android:textColor="@color/clinitickPurple"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/et_name_patient_detail"
         app:layout_constraintStart_toStartOf="@+id/et_name_patient_detail"
