--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="clinicGreen">#17b243</color>
     <color name="checkGreen">#6BCF00</color>
     <color name="clinicLightGreen">#7ec630</color>
-    <color name="orange">#FF7603</color>
+    <color name="clinitickPurple">#472bb3</color>
     <color name="ignoreRed">#CF0000</color>
     <color name="expenseRed">#e02020</color>
     <color name="clinicRed">#ff2927</color>
