--- a/app/src/main/res/drawable/bg_rounded_orange_btn.xml
+++ b/app/src/main/res/drawable/bg_rounded_orange_btn.xml
@@ -5,6 +5,6 @@
 
     <corners android:radius="28dp" />
 
-    <solid android:color="@color/orange" />
+    <solid android:color="@color/clinitickPurple" />
 
 </shape>
