--- a/app/src/main/res/drawable/bg_rounded_white_orange_border_rectangle.xml
+++ b/app/src/main/res/drawable/bg_rounded_white_orange_border_rectangle.xml
@@ -9,5 +9,5 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/orange" />
+        android:color="@color/clinitickPurple" />
 </shape>
