--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     <style name="customNumberPicker">
         <item name="android:textColorPrimary">@color/navyBlue</item>
-        <item name="colorControlNormal">@color/orange</item>
+        <item name="colorControlNormal">@color/clinitickPurple</item>
     </style>
 
 </resources>
