--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -85,7 +85,7 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
         android:fontFamily="@font/vazir_regular"
-        android:gravity="start"
+        android:gravity="right"
         android:hint="نام بیمار"
         android:imeOptions="actionNext"
         android:inputType="text"
