--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="navBarGrey">#D8D8D8</color>
     <color name="searchGrey">#eaeef5</color>
     <color name="fieldBorderGrey">#F0F0F0</color>
-    <color name="navyBlue">#2C2E51</color>
+    <color name="navyBlue">#222440</color>
     <color name="carbonBlue">#6582BC</color>
     <color name="clinicBlue">#0098fd</color>
     <color name="clinicCyan">#00c0da</color>
