--- a/app/src/main/res/drawable/bg_upcoming_home.xml
+++ b/app/src/main/res/drawable/bg_upcoming_home.xml
@@ -3,17 +3,13 @@
     <item>
         <shape
             android:dither="true"
-            android:shape="rectangle">
-
-            <corners android:radius="20dp" />
+            android:shape="oval">
 
             <size
                 android:width="56dp"
                 android:height="56dp" />
 
-            <gradient
-                android:endColor="#8e67f5"
-                android:startColor="#7552f7" />
+            <solid android:color="@color/clinitickPurple" />
         </shape>
     </item>
     <item
