--- a/app/src/main/res/layout/activity_appointment_add.xml
+++ b/app/src/main/res/layout/activity_appointment_add.xml
@@ -21,7 +21,7 @@
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/vazir_bold"
         android:text="فعالیت درمانی"
-        android:textColor="@color/black"
+        android:textColor="@color/navyBlue"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_header_appointment_add"
         app:layout_constraintEnd_toEndOf="parent"
