--- a/app/src/main/res/layout/activity_clinics.xml
+++ b/app/src/main/res/layout/activity_clinics.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/vazir_bold"
         android:text="مطب ها"
-        android:textColor="@color/black"
+        android:textColor="@color/navyBlue"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_header_clinics"
         app:layout_constraintEnd_toEndOf="parent"
