--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/vazir_bold"
         android:text="سلام دکتر جعفری"
-        android:textColor="@color/black"
+        android:textColor="@color/navyBlue"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@id/civ_user_home"
         app:layout_constraintTop_toTopOf="@id/civ_user_home" />
@@ -107,17 +107,17 @@
         android:paddingTop="4dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home"
-        tools:listitem="@layout/today_item" />
+        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home" />
 
     <ImageView
         android:id="@+id/iv_tasks_home"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/bg_tasks_home"
+        android:background="@drawable/bg_today_home"
         app:layout_constraintBottom_toBottomOf="@id/rv_today_home"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/rv_today_home" />
 
     <TextView
         android:id="@+id/tv_upcoming_header_home"
@@ -187,7 +187,8 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_upcoming_home"
         app:layout_constraintBottom_toBottomOf="@id/cv_upcoming_home"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/cv_upcoming_home" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
