--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/vazir_bold"
         android:text="اطلاعات بیمار"
-        android:textColor="@color/black"
+        android:textColor="@color/navyBlue"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_header_patient_detail"
         app:layout_constraintEnd_toEndOf="parent"
