--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -69,6 +69,16 @@
         app:layout_constraintTop_toBottomOf="@id/iv_blur_profile" />
 
     <Button
+        android:id="@+id/btn_logout_profile"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/ic_log_out"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/btn_patients_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
