--- a/app/src/main/res/layout/activity_clinics.xml
+++ b/app/src/main/res/layout/activity_clinics.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="24dp"
         android:background="@android:color/transparent"
         android:drawableStart="@drawable/ic_arrow_left"
-        android:fontFamily="@font/vazir_regular"
+        android:fontFamily="@font/vazir_medium"
         android:text="بازگشت"
         android:textColor="@color/black"
         android:textSize="18sp"
