--- a/app/src/main/res/layout/activity_confirm_code.xml
+++ b/app/src/main/res/layout/activity_confirm_code.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/vazir_bold"
         android:text="ورود کد"
-        android:textColor="@color/clinitickPurple"
+        android:textColor="@color/navyBlue"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
