--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="72dp"
         android:fontFamily="@font/vazir_bold"
         android:text="فرم دندانپزشک"
-        android:textColor="@color/clinitickPurple"
+        android:textColor="@color/navyBlue"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,6 +105,26 @@
         app:layout_constraintTop_toBottomOf="@id/et_register_last_name" />
 
     <EditText
+        android:id="@+id/et_register_clinic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/bg_et_rounded_rectangle"
+        android:fontFamily="@font/vazir_bold"
+        android:gravity="start"
+        android:hint="نام مطب"
+        android:imeOptions="actionNext"
+        android:inputType="text"
+        android:padding="16dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textColorHint="@color/hintGrey"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/et_register_speciality" />
+
+    <EditText
         android:id="@+id/et_register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -122,7 +142,7 @@
         android:textColor="@color/black"
         android:textColorHint="@color/hintGrey"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/et_register_speciality" />
+        app:layout_constraintTop_toBottomOf="@id/et_register_clinic" />
 
     <Button
         android:id="@+id/btn_register_submit"
