--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,46 +43,6 @@
         app:layout_constraintEnd_toEndOf="@+id/tv_header_home" />
 
     <TextView
-        android:id="@+id/tv_quote_header_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="84dp"
-        android:fontFamily="@font/vazir_bold"
-        android:text="سخن بزرگان"
-        android:textColor="@color/navyBlue"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/civ_user_home" />
-
-    <TextView
-        android:id="@+id/tv_quote_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="84dp"
-        android:background="@drawable/bg_tv_home"
-        android:fontFamily="@font/vazir_bold"
-        android:paddingStart="24dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="24dp"
-        android:paddingBottom="16dp"
-        android:text="“آینده از آن کسانی است که به استقبال آن می‌روند.”"
-        android:textColor="@color/navyBlue"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_quote_header_home" />
-
-    <ImageView
-        android:id="@+id/iv_quote_home"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/bg_quote_home"
-        app:layout_constraintBottom_toBottomOf="@id/tv_quote_home"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
         android:id="@+id/tv_today_header_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -93,21 +53,41 @@
         android:textColor="@color/navyBlue"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_quote_home" />
+        app:layout_constraintTop_toBottomOf="@id/civ_user_home" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_today_home"
+    <RelativeLayout
+        android:id="@+id/rl_today_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="84dp"
         android:background="@drawable/bg_tv_home"
-        android:paddingStart="24dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="24dp"
-        android:paddingBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home" />
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home">
+
+        <TextView
+            android:id="@+id/tv_empty_today"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/vazir_bold"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:text="موردی برای نمایش وجود ندارد."
+            android:textColor="@color/black"
+            android:textSize="14sp" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_today_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:paddingBottom="12dp" />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/iv_tasks_home"
@@ -115,9 +95,9 @@
         android:layout_height="56dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_today_home"
-        app:layout_constraintBottom_toBottomOf="@id/rv_today_home"
+        app:layout_constraintBottom_toBottomOf="@id/rl_today_home"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/rv_today_home" />
+        app:layout_constraintTop_toTopOf="@id/rl_today_home" />
 
     <TextView
         android:id="@+id/tv_upcoming_header_home"
@@ -130,55 +110,68 @@
         android:textColor="@color/navyBlue"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_today_home" />
+        app:layout_constraintTop_toBottomOf="@id/rl_today_home" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_upcoming_home"
+    <RelativeLayout
+        android:id="@+id/rl_upcoming_home"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:layout_marginStart="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="84dp"
-        android:outlineProvider="none"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="40dp"
-        app:layout_constraintEnd_toStartOf="@id/iv_upcoming_home"
+        android:background="@drawable/bg_tv_home"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         app:layout_constraintTop_toBottomOf="@id/tv_upcoming_header_home">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="12dp"
+        <TextView
+            android:id="@+id/tv_empty_upcoming"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/vazir_bold"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:text="موردی برای نمایش وجود ندارد."
+            android:textColor="@color/black"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/tv_upcoming_patient_name_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="12dp"
-            android:gravity="end">
+            android:fontFamily="@font/vazir_bold"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/tv_upcoming_patient_name_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:fontFamily="@font/vazir_bold"
-                android:gravity="center"
-                android:text="رضا باقری"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+        <TextView
+            android:id="@+id/tv_upcoming_appointment_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_upcoming_patient_name_home"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:fontFamily="@font/vazir_thin"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/tv_upcoming_patient_problem_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:fontFamily="@font/vazir_thin"
-                android:gravity="center"
-                android:text="تراش دندان"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/tv_time_upcoming_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="24dp"
+            android:fontFamily="@font/vazir_regular"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/iv_upcoming_home"
@@ -186,9 +179,9 @@
         android:layout_height="56dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_upcoming_home"
-        app:layout_constraintBottom_toBottomOf="@id/cv_upcoming_home"
+        app:layout_constraintBottom_toBottomOf="@id/rl_upcoming_home"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cv_upcoming_home" />
+        app:layout_constraintTop_toTopOf="@id/rl_upcoming_home" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
