--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -85,6 +85,30 @@
         app:layout_constraintTop_toBottomOf="@id/rv_calendar_tasks"
         tools:listitem="@layout/tasks_appointment_item" />
 
+    <ImageView
+        android:id="@+id/iv_illustration_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/ill_empty_tasks"
+        app:layout_constraintDimensionRatio="1.057:1"
+        app:layout_constraintTop_toBottomOf="@id/rv_calendar_tasks" />
+
+    <TextView
+        android:id="@+id/tv_empty_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/vazir_regular"
+        android:text="برای این روز قراری ندارید"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/iv_illustration_tasks" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
