--- a/app/src/main/res/layout/activity_add_finance.xml
+++ b/app/src/main/res/layout/activity_add_finance.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/layoutGrey"
     android:layoutDirection="ltr"
-    tools:context=".views.AddFinanceActivity">
+    tools:context=".views.AddEditFinanceActivity">
 
     <ImageView
         android:id="@+id/iv_header_finance_add"
