--- a/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/app/src/main/res/layout/activity_edit_appointment.xml
@@ -52,7 +52,7 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
         android:fontFamily="@font/vazir_regular"
-        android:gravity="start"
+        android:gravity="right"
         android:hint="دلیل ویزیت"
         android:imeOptions="actionNext"
         android:inputType="text"
