--- a/app/src/main/res/layout/activity_monthly_finance.xml
+++ b/app/src/main/res/layout/activity_monthly_finance.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/bg_et_rounded_rectangle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_header_monthly_finance" />
 
@@ -67,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="24dp"
+        android:background="@drawable/bg_et_rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="@id/spinner_monthly_finance_year"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/spinner_monthly_finance_year"
