--- a/app/src/main/res/layout/activity_patients.xml
+++ b/app/src/main/res/layout/activity_patients.xml
@@ -67,7 +67,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_patients"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_search_patients"
         tools:listitem="@layout/patient_item" />
 
