--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/layoutGrey"
     android:layoutDirection="ltr"
-    tools:context=".views.AddTaskActivity">
+    tools:context=".views.AddEditTaskActivity">
 
     <ImageView
         android:id="@+id/iv_header_task_add"
