--- a/app/src/main/res/layout/activity_add_clinic.xml
+++ b/app/src/main/res/layout/activity_add_clinic.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_header_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_clinic_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/et_name_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_red_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -92,7 +92,7 @@
         app:layout_constraintStart_toStartOf="@id/et_address_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_pink_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -102,7 +102,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_red_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_purple_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -112,7 +112,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_pink_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_blue_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -122,7 +122,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_purple_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_cyan_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -132,7 +132,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_blue_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_teal_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -142,7 +142,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_cyan_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_green_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -152,7 +152,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_teal_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_color_light_green_clinic_add"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -162,7 +162,7 @@
         app:layout_constraintStart_toEndOf="@id/btn_color_green_clinic_add"
         app:layout_constraintTop_toBottomOf="@id/et_address_clinic_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_submit_clinic_add"
         android:layout_width="132dp"
         android:layout_height="40dp"
