--- a/app/src/main/res/layout/activity_add_finance.xml
+++ b/app/src/main/res/layout/activity_add_finance.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_header_finance_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_finance_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -102,7 +102,7 @@
         app:layout_constraintStart_toStartOf="@+id/spinner_type_finance_add"
         app:layout_constraintTop_toTopOf="@id/spinner_type_finance_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_date_finance_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/spinner_type_finance_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_submit_finance_add"
         android:layout_width="132dp"
         android:layout_height="40dp"
