--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_header_task_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_task_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/iv_header_task_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_time_task_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
         app:layout_constraintStart_toStartOf="@+id/spinner_clinic_task_add"
         app:layout_constraintTop_toTopOf="@id/spinner_clinic_task_add" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_submit_task_add"
         android:layout_width="132dp"
         android:layout_height="40dp"
