--- a/app/src/main/res/layout/activity_clinics.xml
+++ b/app/src/main/res/layout/activity_clinics.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_goneMarginEnd="24dp" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_clinics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add_clinic_clinics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
