--- a/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/app/src/main/res/layout/activity_edit_appointment.xml
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_header_appointment_edit" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_appointment_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/et_disease_appointment_edit" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_time_appointment_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/et_price_appointment_edit" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_submit_appointment_edit"
         android:layout_width="132dp"
         android:layout_height="40dp"
