--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -86,7 +86,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/et_phone_intro" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_login_intro"
         android:layout_width="136dp"
         android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_password_intro" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_register_intro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
