--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,17 +68,18 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_blur_profile"
         app:layout_constraintTop_toBottomOf="@id/iv_blur_profile" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_logout_profile"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/ic_log_out"
+        android:backgroundTint="@color/navyBlue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_patients_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -106,7 +107,7 @@
         app:layout_constraintEnd_toEndOf="@id/btn_patients_profile"
         app:layout_constraintTop_toTopOf="@id/btn_patients_profile" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_clinics_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -134,7 +135,7 @@
         app:layout_constraintEnd_toEndOf="@id/btn_clinics_profile"
         app:layout_constraintTop_toTopOf="@id/btn_clinics_profile" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_settings_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -162,7 +163,7 @@
         app:layout_constraintEnd_toEndOf="@id/btn_settings_profile"
         app:layout_constraintTop_toTopOf="@id/btn_settings_profile" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_about_us_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
