--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     android:layoutDirection="ltr"
     tools:context=".views.RegisterActivity">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_register"
         android:layout_width="8dp"
         android:layout_height="14dp"
@@ -144,7 +144,7 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/et_register_clinic" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_register_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
