--- a/app/src/main/res/layout/add_appointment_item.xml
+++ b/app/src/main/res/layout/add_appointment_item.xml
@@ -47,7 +47,7 @@
             android:textColorHint="@color/hintGrey"
             android:textSize="16sp" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_time_appointment_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
