--- a/app/src/main/res/layout/patient_appointment_item.xml
+++ b/app/src/main/res/layout/patient_appointment_item.xml
@@ -48,7 +48,7 @@
             app:layout_constraintStart_toEndOf="@id/btn_cancel_patient_appointment_cv"
             app:layout_constraintTop_toBottomOf="@id/tv_title_patient_appointment_cv" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_check_patient_appointment_cv"
             android:layout_width="32dp"
             android:layout_height="32dp"
@@ -59,7 +59,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_cancel_patient_appointment_cv"
             android:layout_width="32dp"
             android:layout_height="32dp"
