--- a/app/src/main/res/layout/tasks_appointment_item.xml
+++ b/app/src/main/res/layout/tasks_appointment_item.xml
@@ -69,7 +69,7 @@
                 app:layout_constraintStart_toEndOf="@id/btn_cancel_tasks_appointment_cv"
                 app:layout_constraintTop_toBottomOf="@id/tv_patient_name_tasks_appointment_cv" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_check_tasks_appointment_cv"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
@@ -80,7 +80,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_cancel_tasks_appointment_cv"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
