notification tof mal :(

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/user_profile_picture"
+        android:background="@drawable/bg_add_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
