--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/user_profile_picture"
+        android:background="@drawable/bg_add_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
