--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,31 +18,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_register_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:fontFamily="@font/vazir_bold"
-        android:text="فرم دندانپزشک"
-        android:textColor="@color/navyBlue"
-        android:textSize="28sp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/civ_register_add_photo"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="68dp"
+        android:background="@drawable/bg_add_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_register_instruction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/vazir_regular"
-        android:text="لطفا اطلاعات زیر را تکمیل کنید"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_register_header" />
 
     <EditText
         android:id="@+id/et_register_name"
@@ -62,7 +46,7 @@
         android:textColor="@color/black"
         android:textColorHint="@color/hintGrey"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_register_instruction" />
+        app:layout_constraintTop_toBottomOf="@id/civ_register_add_photo" />
 
     <EditText
         android:id="@+id/et_register_last_name"
